@@ -4,16 +4,13 @@ This is a list of some things to do:
    - SilverLink cable is using more CPU than it should do under Windows => add a function in ticables2 which
    allow to use 2 methods (active polling w/ timeout, needed by TiEmu and timeout managed by OS)
 2) updates dirlist & mem when sending apps
+3) implement full/true backup (in tig ?)
+4) dragging the app node should receive all apps
+
+5) SilverLink drivers don't install on Vista2
+6) user box: overwrite/skip all
 
 //------
-
-- Tyler Cassidy:
-<<
-I think I found an error in TiLP-II, when I ran the screeshot feature with the 83+ on the 
-Officail TiLP-II Binary it crashed the entire program and closed it, but when I compiled it 
-fresh off of SVN along with libticalcs2 0.1.3 it worked fine, maybe this is a compiler error? 
-I used MSYS/MinGW and it worked
->>
 
 - suggestions from O. Armand:
 <<
